--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body {
+  padding: 0;
   margin: 0;
   display: flex;
   place-items: center;
   justify-content: center;
   min-height: 100vh;
   width: 100vw;
+}
+
+a {
+  text-decoration: none;
 }
 
 @media (prefers-color-scheme: light) {
