--- a/src/layout.module.less
+++ b/src/layout.module.less
@@ -42,7 +42,7 @@
 
 .nav .header{
   padding: 10px 5px;
-  margin: 0;
+  margin: 0 5px;
   font-size: 18px;
   padding-left: 12px;
   border-bottom: 1px solid #eee;
@@ -53,9 +53,18 @@
 }
 
 .nav .footer{
-  padding: 12px;
+  padding: 12px 0;
+  margin: 0 5px;
   text-align: right;
   border-top: 1px solid #eee;
+}
+
+.nav .logout {
+  color: #1677ff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  margin-right: 10px;
 }
 
 .main {
